repair navbar's bug on mobile with 100%vw

--- a/src/components/NavbarComp/NavbarComp.scss
+++ b/src/components/NavbarComp/NavbarComp.scss
@@ -19,11 +19,16 @@ $medDisp: 991px;
 }
 
 .navbar {
+
+    display: top;
+    position: fixed;
+    max-width: 100vw;
     padding-bottom: 0.8rem !important;
 
     @media (max-width: $medDisp) {
         padding-bottom: 1.2rem !important;
     }
+
 
 }
 
